--- a/index.html
+++ b/index.html
@@ -1,12 +1,139 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red1a1 | Home</title>
+
+    <!-- framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- css -->
+    <link rel="stylesheet" href="css/custom.css">
+
+
 </head>
+
 <body>
-    
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light nav-style">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="./images/logos/red1a1-color.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+                <div class="d-flex">
+                    <button class="nav-enlace me-4" type="submit">Regístrate</button>
+                    <a class="sesion-btn mb-2 mb-lg-0" data-bs-toggle="modal" href="#exampleModalToggle"
+                        role="button">Inicia Sesión</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar -->
+    <div class="container">
+        <div class="purple-nav">
+            <form action="">
+                <input type="text" class="search-input" placeholder="Busca aqui...">
+                <button class="search-btn"><i class="bi bi-search"></i></button>
+            </form>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- modal sesion -->
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
+        tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalToggleLabel">Inicia sesión</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-10">
+                            <label for="correo">Correo electrónico</label><br>
+                            <input type="mail" name="correo" required>
+                        </div>
+                        <div class="col-10">
+                            <label for="">Contraseña</label><br>
+                            <input type="password">
+                        </div>
+                        <div class="col-4">
+                            <hr>
+                        </div>
+                        <div class="col-2 text-center">
+                            O
+                        </div>
+                        <div class="col-4">
+                            <hr>
+                        </div>
+                        <div class="col-10 mb-3 text-center">
+                            <button>Inicia sesión con Google</button>
+                        </div>
+                        <div class="col-10 mb-3 text-center">
+                            <button>Inicia sesión con Facebook</button>
+                        </div>
+                        <div class="col-10 mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Recordarme
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-10 mb-3 text-center">
+                            <button>Iniciar sesión</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" 
+                        data-bs-target="#exampleModalToggle2" 
+                        data-bs-toggle="modal">
+                        ¿Aún no tienes cuenta? Regístrate.
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2"
+        tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalToggleLabel2">Modal 2</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Hide this modal and show the first with the button below.
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to
+                        first</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal sesion -->
+
+
+
+    <!-- framework -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
