--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light nav-style">
+    <nav class="navbar navbar-expand-sm navbar-light nav-style">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="./images/logos/red1a1-color.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -56,50 +56,55 @@
         tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalToggleLabel">Inicia sesión</h5>
+                <div class="modal-header" style="border: none;">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-10">
-                            <label for="correo">Correo electrónico</label><br>
-                            <input type="mail" name="correo" required>
+                        <div class="col-12 text-center">
+                            <div class="login-title">
+                                <h3>Inicia sesión</h3>
+                                <div class="line"></div>
+                            </div>
                         </div>
                         <div class="col-10">
-                            <label for="">Contraseña</label><br>
-                            <input type="password">
+                            <label class="modal-labels" for="correo">Correo electrónico</label><br>
+                            <input class="modal-inputs mb-4" type="mail" name="correo" required>
                         </div>
-                        <div class="col-4">
+                        <div class="col-10">
+                            <label class="modal-labels" for="">Contraseña</label><br>
+                            <input class="modal-inputs mb-4" type="password" required>
+                        </div>
+                        <div class="col-4 my-4">
                             <hr>
                         </div>
-                        <div class="col-2 text-center">
+                        <div class="col-2 text-center my-4 modal-labels">
                             O
                         </div>
-                        <div class="col-4">
+                        <div class="col-4 my-4">
                             <hr>
                         </div>
                         <div class="col-10 mb-3 text-center">
-                            <button>Inicia sesión con Google</button>
+                            <button class="modal-google-btn"><img class="me-3" src="./images/icons/google-icon.png" alt=""> Inicia sesión con Google</button>
                         </div>
                         <div class="col-10 mb-3 text-center">
-                            <button>Inicia sesión con Facebook</button>
+                            <button class="modal-fb-btn mb-3"><img class="me-3" src="./images/icons/fb-icon.png" alt=""> Inicia sesión con Facebook</button>
                         </div>
                         <div class="col-10 mb-3">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">
+                                <label class="modal-labels" for="flexCheckDefault">
                                     Recordarme
                                 </label>
                             </div>
                         </div>
                         <div class="col-10 mb-3 text-center">
-                            <button>Iniciar sesión</button>
+                            <button class="modal-login-btn">Iniciar sesión</button>
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button class="btn btn-primary" 
+                <div class="text-center">
+                    <button class="modal-registro-btn mb-4" 
                         data-bs-target="#exampleModalToggle2" 
                         data-bs-toggle="modal">
                         ¿Aún no tienes cuenta? Regístrate.
