--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
     </nav>
     <!-- navbar -->
+
+
     <div class="container">
         <div class="purple-nav">
             <form action="">
@@ -46,9 +48,35 @@
         </div>
     </div>
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10524.494622995406!2d-86.84883267989952!3d21.1535619722256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1639088950549!5m2!1ses-419!2smx" 
+        width="100%" 
+        height="900" 
+        style="border:0;" 
+        allowfullscreen="true">
+    </iframe>
 
-
-
+    <!-- seccion 1 -->
+    <div class="container">
+        <section class="section-1">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <img src="" alt="...">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="title">
+                        ¿Qué es Red 1 a 1?
+                    </div>
+                    <div class="content">
+                        Una App que facilita la compra, venta y renta de propiedades 
+                        en cualquier lugar, Red 1 a 1 nace para dar solución a las 
+                        necesidades del mercado actual, la fórmula es simple. Crear 
+                        un entorno en el cual, asesores e inmobiliarias puedan llegar 
+                        a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
 
     <!-- modal sesion -->
