--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         allowfullscreen="true">
     </iframe>
 
+
+
     <!-- seccion 1 -->
     <div class="container">
         <section class="section-1">
@@ -77,6 +79,40 @@
             </div>
         </section>
     </div>
+
+    <!-- seccion 1 -->
+    <div class="container">
+        <section class="section-1">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <img src="" alt="...">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="title">
+                        ¿Qué es Red 1 a 1?
+                    </div>
+                    <div class="content">
+                        Una App que facilita la compra, venta y renta de propiedades 
+                        en cualquier lugar, Red 1 a 1 nace para dar solución a las 
+                        necesidades del mercado actual, la fórmula es simple. Crear 
+                        un entorno en el cual, asesores e inmobiliarias puedan llegar 
+                        a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- modal sesion -->
