--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <!-- navbar -->
 
-
+    <!-- barra morada -->
     <div class="container">
         <div class="purple-nav">
             <form action="">
@@ -48,11 +48,9 @@
         </div>
     </div>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10524.494622995406!2d-86.84883267989952!3d21.1535619722256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1639088950549!5m2!1ses-419!2smx" 
-        width="100%" 
-        height="900" 
-        style="border:0;" 
-        allowfullscreen="true">
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10524.494622995406!2d-86.84883267989952!3d21.1535619722256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1639088950549!5m2!1ses-419!2smx"
+        width="100%" height="900" style="border:0;" allowfullscreen="true">
     </iframe>
 
 
@@ -62,17 +60,19 @@
         <section class="section-1">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <img src="" alt="...">
+                    <center>
+                        <img src="./images/content/que-es.png" alt="...">
+                    </center>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="title">
+                    <div class="title my-5">
                         ¿Qué es Red 1 a 1?
                     </div>
-                    <div class="content">
-                        Una App que facilita la compra, venta y renta de propiedades 
-                        en cualquier lugar, Red 1 a 1 nace para dar solución a las 
-                        necesidades del mercado actual, la fórmula es simple. Crear 
-                        un entorno en el cual, asesores e inmobiliarias puedan llegar 
+                    <div class="content mb-4">
+                        Una App que facilita la compra, venta y renta de propiedades
+                        en cualquier lugar, Red 1 a 1 nace para dar solución a las
+                        necesidades del mercado actual, la fórmula es simple. Crear
+                        un entorno en el cual, asesores e inmobiliarias puedan llegar
                         a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
                     </div>
                 </div>
@@ -80,24 +80,32 @@
         </section>
     </div>
 
-    <!-- seccion 1 -->
+    <!-- seccion 2 -->
     <div class="container">
         <section class="section-1">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <img src="" alt="...">
+                    <div class="title my-5">
+                        ¿Cómo funciona?
+                    </div>
+                    <div class="content mb-4">
+                        Red 1 a 1 permite la comunicación y el intercambio de carteras de clientes y propiedades.
+                        A través de esta herramienta versátil podrás agregar, buscar y compartir propiedades,
+                        también podrás comunicarte a través de un sistema de chat con otros asesores e inmobiliarias
+                        de la comunidad a nivel nacional.
+
+                        Encuentra la propiedad que tu cliente necesita, comparte tus inmuebles con nuestra comunidad de
+                        asesores y obtén más resultados en ventas con la mejor estrategia para los asesores
+                        inmobiliarios.
+                    </div>
+                    <div class="sub-title">
+                        Forma parte de la comunidad inmobiliaria más grande de México.
+                    </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="title">
-                        ¿Qué es Red 1 a 1?
-                    </div>
-                    <div class="content">
-                        Una App que facilita la compra, venta y renta de propiedades 
-                        en cualquier lugar, Red 1 a 1 nace para dar solución a las 
-                        necesidades del mercado actual, la fórmula es simple. Crear 
-                        un entorno en el cual, asesores e inmobiliarias puedan llegar 
-                        a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
-                    </div>
+                    <center>
+                        <img src="./images/content/como-funciona.png" alt="...">
+                    </center>
                 </div>
             </div>
         </section>
@@ -106,8 +114,107 @@
 
 
 
+    <!-- Footer -->
+    <section class="section-1">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start text-muted footer-style">
+            <!-- Section: Social media -->
+            <section class="d-flex justify-content-center justify-content-lg-between p-4">
+                <!-- Left -->
+                <div class="me-5 d-none d-lg-block">
+                    
+                </div>
+                <!-- Left -->
 
+                <!-- Right -->
+                <div>
+                    
+                </div>
+                <!-- Right -->
+            </section>
+            <!-- Section: Social media -->
 
+            <!-- Section: Links  -->
+            <section class="mb-extend">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-sm-12 col-md-6 p-4 col-xl-5">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <img src="./images/logos/red1a1-blanco.png" alt="...">
+                            </h6>
+                            <p class="footer-content">
+                                Red 1a1 es la solución para asesores independientes e inmobiliarias que permite la comunicación y 
+                                el intercambio de carteras de clientes y propiedades. 
+                                A través de esta herramienta versátil podrás agregar, buscar y compartir propiedades.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-sm-12 col-md-6 p-4 col-xl-2">
+                            <!-- Links -->
+                            <h5 class="fw-bold text-white mb-4">
+                                Secciones
+                            </h5>
+                            <p class="">
+                                <a href="#!" class="footer-link">Nosotros</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="footer-link">Paquetes</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="footer-link">Contáctanos</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="footer-link">Registro</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-sm-12 col-md-6 p-4 col-xl-2">
+                            <!-- Links -->
+                            <h5 class="fw-bold text-white mb-4">
+                                Nuestras Oficinas
+                            </h5>
+                            <p class="footer-content">
+                                Querétaro, México. C.P. 76230
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-sm-12 col-md-6 p-4 col-xl-3">
+                            <!-- Links -->
+                            <h5 class="fw-bold text-white mb-4">
+                                Teléfono
+                            </h5>
+                            <p class="footer-content">
+                                <a class="footer-phone" href="tel:442 543 9190">442 543 9190</a>
+                            </p>
+                            <div class="icons">
+                                <a class="me-2" href="#"><img src="./images/icons/Facebook.png" alt=""></a>
+                                <a href="#"><img src="./images/icons/WhatsApp.png" alt=""></a>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                Copyright © 2021:<a class="text-reset fw-bold" style="text-decoration: none;" href="#"> Red 1 a 1</a>. Todos los derechos reservados.
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </section>
 
 
 
@@ -149,10 +256,12 @@
                             <hr>
                         </div>
                         <div class="col-10 mb-3 text-center">
-                            <button class="modal-google-btn"><img class="me-3" src="./images/icons/google-icon.png" alt=""> Inicia sesión con Google</button>
+                            <button class="modal-google-btn"><img class="me-3" src="./images/icons/google-icon.png"
+                                    alt=""> Inicia sesión con Google</button>
                         </div>
                         <div class="col-10 mb-3 text-center">
-                            <button class="modal-fb-btn mb-3"><img class="me-3" src="./images/icons/fb-icon.png" alt=""> Inicia sesión con Facebook</button>
+                            <button class="modal-fb-btn mb-3"><img class="me-3" src="./images/icons/fb-icon.png" alt="">
+                                Inicia sesión con Facebook</button>
                         </div>
                         <div class="col-10 mb-3">
                             <div class="form-check">
@@ -168,8 +277,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <button class="modal-registro-btn mb-4" 
-                        data-bs-target="#exampleModalToggle2" 
+                    <button class="modal-registro-btn mb-4" data-bs-target="#exampleModalToggle2"
                         data-bs-toggle="modal">
                         ¿Aún no tienes cuenta? Regístrate.
                     </button>
