--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red 1 a 1 |   Home</title>
+    <title>Red 1 a 1 |   Nosotros</title>
 
     <!-- framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,76 +22,84 @@
 
     <!-- barra morada -->
     <div class="container">
-        <div class="purple-nav">
-            <form action="">
-                <input type="text" class="search-input" placeholder="Busca aquí...">
-                <button class="search-btn"><i class="bi bi-search"></i></button>
-            </form>
+        <div class="purple-nav-2">
+            <ul class="nav">
+                <li class="nav-item">
+                  <a class="purple-links me-4" href="#">Mis Propiedades</a>
+                </li>
+                <li class="nav-item">
+                  <a class="purple-links me-4" href="#">Mis Favoritos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="purple-links me-4" href="#">Mi Cuenta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="purple-links me-4" href="#">Historial de Inmuebles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="purple-img-link" href="#"><img src="./images/icons/notify.png" alt="..."></a>
+                  </li>
+              </ul>
         </div>
     </div>
 
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10524.494622995406!2d-86.84883267989952!3d21.1535619722256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1639088950549!5m2!1ses-419!2smx"
-        width="100%" height="900" style="border:0;" allowfullscreen="true">
-    </iframe>
-
-
-
-    <!-- seccion 1 -->
-    <div class="container">
-        <section class="section-1">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <center>
-                        <img src="./images/content/que-es.png" alt="...">
-                    </center>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="title my-5">
-                        ¿Qué es Red 1 a 1?
+    <section class="section-2">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12">
+                    <div class="title-2">
+                        Nosotros
                     </div>
-                    <div class="content mb-4">
-                        Una App que facilita la compra, venta y renta de propiedades
-                        en cualquier lugar, Red 1 a 1 nace para dar solución a las
-                        necesidades del mercado actual, la fórmula es simple. Crear
-                        un entorno en el cual, asesores e inmobiliarias puedan llegar
-                        a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
+                    <div class="line-2"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-2">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-10">
+                    <div class="row">
+                        <div class="col">
+                            <center>
+                                <img src="./images/content/nosotros-1.png" alt="...">
+                            </center>
+                        </div>
+                        <div class="col my-5">
+                            <div class="title mb-5">
+                                Acerca de nosotros
+                            </div>
+                            <div class="content">
+                                <p>
+                                    Red 1 a 1 nace para dar solución a las necesidades del mercado inmobiliario. Creamos una plataforma en donde asesores y clientes podrán agregar, buscar y compartir propiedades.
+                                </p>
+    
+                                <p>
+                                    En Red 1 a 1 nos enfocamos en la solución a las necesidades del mercado actual, la fórmula es simple. Creamos un entorno en el cual los asesores e inmobiliarias puedan llegar a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
-    <!-- seccion 2 -->
-    <div class="container">
-        <section class="section-1">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="title my-5">
-                        ¿Cómo funciona?
+    <section class="section-1">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-10 text-center">
+                    <div class="title mb-4">
+                        ¿Por qué compartir mis propiedades?
                     </div>
-                    <div class="content mb-4">
-                        Red 1 a 1 permite la comunicación y el intercambio de carteras de clientes y propiedades.
-                        A través de esta herramienta versátil podrás agregar, buscar y compartir propiedades,
-                        también podrás comunicarte a través de un sistema de chat con otros asesores e inmobiliarias
-                        de la comunidad a nivel nacional.
-
-                        Encuentra la propiedad que tu cliente necesita, comparte tus inmuebles con nuestra comunidad de
-                        asesores y obtén más resultados en ventas con la mejor estrategia para los asesores
-                        inmobiliarios.
+                    <div class="content">
+                        El mercado actual de clientes demanda más cartera de propiedades, la mayoría de las veces con necesidades específicas. Al compartir tu propiedad formas parte del sistema ganar-ganar, vendes tu propiedad más rápido o tienes una cartera más grande de propiedades que puedes ofrecer y que satisfacen los requerimientos de los clientes.
                     </div>
-                    <div class="sub-title">
-                        Forma parte de la comunidad inmobiliaria más grande de México.
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <center>
-                        <img src="./images/content/como-funciona.png" alt="...">
-                    </center>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
 
 
