--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red 1 a 1 |   Nosotros</title>
+    <title>Red 1 a 1 | Nosotros</title>
 
     <!-- framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,6 +13,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/nosotros-style.css">
 </head>
 
 <body>
@@ -25,21 +26,21 @@
         <div class="purple-nav-2">
             <ul class="nav">
                 <li class="nav-item">
-                  <a class="purple-links me-4" href="#">Mis Propiedades</a>
+                    <a class="purple-links me-4" href="#">Mis Propiedades</a>
                 </li>
                 <li class="nav-item">
-                  <a class="purple-links me-4" href="#">Mis Favoritos</a>
+                    <a class="purple-links me-4" href="#">Mis Favoritos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="purple-links me-4" href="#">Mi Cuenta</a>
+                    <a class="purple-links me-4" href="#">Mi Cuenta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="purple-links me-4" href="#">Historial de Inmuebles</a>
+                    <a class="purple-links me-4" href="#">Historial de Inmuebles</a>
                 </li>
                 <li class="nav-item">
                     <a class="purple-img-link" href="#"><img src="./images/icons/notify.png" alt="..."></a>
-                  </li>
-              </ul>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -72,11 +73,16 @@
                             </div>
                             <div class="content">
                                 <p>
-                                    Red 1 a 1 nace para dar solución a las necesidades del mercado inmobiliario. Creamos una plataforma en donde asesores y clientes podrán agregar, buscar y compartir propiedades.
+                                    Red 1 a 1 nace para dar solución a las necesidades del mercado inmobiliario. Creamos
+                                    una plataforma en donde asesores y clientes podrán agregar, buscar y compartir
+                                    propiedades.
                                 </p>
-    
+
                                 <p>
-                                    En Red 1 a 1 nos enfocamos en la solución a las necesidades del mercado actual, la fórmula es simple. Creamos un entorno en el cual los asesores e inmobiliarias puedan llegar a un mutuo acuerdo de intercambio de propiedades y clientes para que todos ganen.
+                                    En Red 1 a 1 nos enfocamos en la solución a las necesidades del mercado actual, la
+                                    fórmula es simple. Creamos un entorno en el cual los asesores e inmobiliarias puedan
+                                    llegar a un mutuo acuerdo de intercambio de propiedades y clientes para que todos
+                                    ganen.
                                 </p>
                             </div>
                         </div>
@@ -94,7 +100,169 @@
                         ¿Por qué compartir mis propiedades?
                     </div>
                     <div class="content">
-                        El mercado actual de clientes demanda más cartera de propiedades, la mayoría de las veces con necesidades específicas. Al compartir tu propiedad formas parte del sistema ganar-ganar, vendes tu propiedad más rápido o tienes una cartera más grande de propiedades que puedes ofrecer y que satisfacen los requerimientos de los clientes.
+                        El mercado actual de clientes demanda más cartera de propiedades, la mayoría de las veces con
+                        necesidades específicas. Al compartir tu propiedad formas parte del sistema ganar-ganar, vendes
+                        tu propiedad más rápido o tienes una cartera más grande de propiedades que puedes ofrecer y que
+                        satisfacen los requerimientos de los clientes.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/cartera.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Amplia tu cartera
+                        </div>
+                        <div class="nosotros-card-content">
+                            Puedes vender propiedades de otros asesores y compartir comisión.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/propiedades.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Agrega tus propiedades
+                        </div>
+                        <div class="nosotros-card-content">
+                            Agrega en Red 1 a 1 todas tus propiedades, no hay límites.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/comunidad.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Comunidad
+                        </div>
+                        <div class="nosotros-card-content">
+                            Red 1 a 1 es la red más grande de asesores en México.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/inmobiliarias.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Inmobiliarias
+                        </div>
+                        <div class="nosotros-card-content">
+                            Inmobiliarias pueden crear y gestionar asesores
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/app.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            App
+                        </div>
+                        <div class="nosotros-card-content">
+                            Lleva todas tus propiedades en tu celular con Red 1 a 1.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-4">
+                    <div class="nosotros-card">
+                        <center>
+                            <img src="./images/icons/tiempo.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Interacción en tiempo real
+                        </div>
+                        <div class="nosotros-card-content">
+                            Chatea con otros asesores / inmobiliarias en tiempo real.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="section-1">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-10 text-center">
+                    <div class="title mb-5">
+                        Características de la Plataforma RED 1 A 1
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/agrega.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Agregar Propiedades a la plataforma
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/buscador.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Buscador de Propiedades
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/compartir.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Compartir y solicitar propiedades a otros asesores / inmobiliarias
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/servicio.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Servicio de chat con otros asesores / inmobiliarias en tiempo real
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/comparte.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Comparte propiedades que se ajusten a las necesidades del cliente
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 text-center mb-1">
+                    <div class="nosotros-card-2">
+                        <center>
+                            <img src="./images/icons/notificacion.png" alt="...">
+                        </center>
+                        <div class="nosotros-card-title my-4">
+                            Notificación de nuevas propiedades
+                        </div>
                     </div>
                 </div>
             </div>
