--- a/paquetes.html
+++ b/paquetes.html
@@ -69,23 +69,54 @@
                             Individual
                         </div>
                         <hr>
-                        <div class="paquetes-card-precio text-center">
-                            $2,500 MXN*
-                        </div>
                         <ul>
-                            <li>
-                                Anual
-                            </li>
-                            <li>
-                                Semestral
-                            </li>
-                            <li>
-                                Trimestral
-                            </li>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td class="tupla">
+                                            <li>
+                                                Anual
+                                            </li>
+                                        </td>
+                                        <td class="tupla">
+                                            <div class="paquetes-card-precio-2">
+                                                $3,999 MXN
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tupla">
+                                            <li>
+                                                Semestral
+                                            </li>
+                                        </td>
+                                        <td class="tupla">
+                                            <div class="paquetes-card-precio-2">
+                                                $1,999 MXN
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tupla">
+                                            <li>
+                                                Trimestral
+                                            </li>
+                                        </td>
+                                        <td class="tupla">
+                                            <div class="paquetes-card-precio-2">
+                                                $1,250 MXN
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             <li>
                                 Recomendado para asesor independiente
                             </li>
                         </ul>
+                        <div class="ajusta-btn text-center">
+                            <a class="btn-contratar" href="#">CONTRATAR</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
