--- a/paquetes.html
+++ b/paquetes.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-sm navbar-light nav-style" id="whitebar"></nav>
+    <nav class="navbar navbar-expand-lg navbar-light nav-style" id="whitebar"></nav>
     <!-- navbar -->
 
     <!-- barra morada -->
@@ -60,7 +60,7 @@
     <section class="my-5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="paquetes-card">
                         <center>
                             <img src="./images/icons/individual.png" alt="...">
@@ -113,13 +113,13 @@
                             <li>
                                 Recomendado para asesor independiente
                             </li>
-                        </ul>
-                        <div class="ajusta-btn text-center">
-                            <a class="btn-contratar" href="#">CONTRATAR</a>
+                        </ul>    
+                        <div class="text-center ajuste-btn">
+                            <button type="button" class="btn-contratar">CONTRATAR</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="paquetes-card">
                         <center>
                             <img src="./images/icons/basico.png" alt="...">
@@ -139,9 +139,12 @@
                                 Precio especial al contratar de 3 a 5 usuarios.
                             </li>
                         </ul>
+                        <div class="text-center ajuste-btn">
+                            <button type="button" class="btn-contratar">CONTRATAR</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="paquetes-card">
                         <center>
                             <img src="./images/icons/intermedio.png" alt="...">
@@ -161,9 +164,12 @@
                                 Precio especial al contratar de 6 a 10 usuarios.
                             </li>
                         </ul>
+                        <div class="text-center ajuste-btn">
+                            <button type="button" class="btn-contratar">CONTRATAR</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="paquetes-card">
                         <center>
                             <img src="./images/icons/avanzado.png" alt="...">
@@ -183,12 +189,14 @@
                                 Precio especial de 11 usuarios en adelante.
                             </li>
                         </ul>
+                        <div class="text-center ajuste-btn">
+                            <button type="button" class="btn-contratar">CONTRATAR</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
 
 
