--- a/paquetes.html
+++ b/paquetes.html
@@ -22,26 +22,8 @@
     <!-- navbar -->
 
     <!-- barra morada -->
-    <div class="container">
-        <div class="purple-nav-2">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="purple-links me-4" href="#">Mis Propiedades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="purple-links me-4" href="#">Mis Favoritos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="purple-links me-4" href="#">Mi Cuenta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="purple-links me-4" href="#">Historial de Inmuebles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="purple-img-link" href="#"><img src="./images/icons/notify.png" alt="..."></a>
-                </li>
-            </ul>
-        </div>
+    <div class="container" id="purple-nav-1">
+        
     </div>
 
     <section class="section-2">
@@ -341,6 +323,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
     <script src="./js/navbar.js"></script>
+    <script src="./js/purple-nav-1.js"></script>
     <script src="./js/footer.js"></script>
     <script src=""></script>
 </body>
