--- a/index.html
+++ b/index.html
@@ -17,18 +17,12 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-sm navbar-light nav-style" id="whitebar"></nav>
+    <nav class="navbar navbar-expand-lg navbar-light nav-style" id="whitebar"></nav>
     <!-- navbar -->
 
     <!-- barra morada -->
-    <div class="container">
-        <div class="purple-nav">
-            <form action="">
-                <input type="text" class="search-input" placeholder="Busca aquí...">
-                <button class="search-btn"><i class="bi bi-search"></i></button>
-            </form>
-        </div>
-    </div>
+    <div class="container" id="purple-nav-1"></div>
+    <!-- barra morada -->
 
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10524.494622995406!2d-86.84883267989952!3d21.1535619722256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1639088950549!5m2!1ses-419!2smx"
@@ -237,6 +231,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
     <script src="./js/navbar.js"></script>
+    <script src="./js/purple-nav-1.js"></script>
     <script src="./js/footer.js"></script>
     <script src=""></script>
 </body>
