--- a/paquetes.html
+++ b/paquetes.html
@@ -22,10 +22,10 @@
     <!-- navbar -->
 
     <!-- barra morada -->
-    <div class="container" id="purple-nav-1"></div>
+    <div class="" id="purple-nav-2"></div>
     <!-- barra morada -->
 
-    
+
     <section class="section-2">
         <div class="container">
             <div class="row d-flex justify-content-center">
@@ -95,7 +95,7 @@
                             <li>
                                 Recomendado para asesor independiente
                             </li>
-                        </ul>    
+                        </ul>
                         <div class="text-center ajuste-btn">
                             <button type="button" class="btn-contratar">CONTRATAR</button>
                         </div>
@@ -176,6 +176,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12">
+                    <div class="advice text-center">
+                        *Precios indicados son por cada usuario.
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -186,16 +191,15 @@
     <section class="section-1" id="footer"></section>
     <!-- Footer -->
 
-    
+
 
     <!-- framework -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
     <script src="./js/navbar.js"></script>
-    <script src="./js/purple-nav-1.js"></script>
+    <script src="./js/purple-nav-2.js"></script>
     <script src="./js/footer.js"></script>
-    <script src=""></script>
 </body>
 
 </html>
